--- a/packages/frontend/src/scss/reset.scss
+++ b/packages/frontend/src/scss/reset.scss
@@ -10,15 +10,15 @@
 html {
   -webkit-text-size-adjust: 100%;
   font-size: 16px;
-  scroll-behavior: smooth;
+  line-height: 1;
 }
 
 body {
   margin: 0;
-  font-family: sans-serif;
 }
 
-ul {
+ul,
+ol {
   padding: 0;
   list-style-type: none;
 }
@@ -29,6 +29,7 @@ h3,
 h4,
 h5,
 h6,
+blockquote,
 p,
 ol,
 ul,
@@ -46,6 +47,12 @@ h6 {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+}
+
+button {
+  display: block;
+  margin: 0;
+  background-color: transparent;
+  border: 0;
 }
