--- a/packages/frontend/src/scss/components/toc-toggle-button.scss
+++ b/packages/frontend/src/scss/components/toc-toggle-button.scss
@@ -7,47 +7,16 @@
   background-color: var(--color-bg);
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
 
-  .toc-visible & {
-    right: var(--size-4); // so that scrollbar peeks through
-    box-shadow: none;
-
-    &:before {
-      position: absolute;
-      top: 100%;
-      right: 0;
-      left: var(--size-4);
-      display: block;
-      height: 1px;
-      background-color: var(--color-fg-5);
-      content: '';
-    }
-  }
-
   &__button {
     position: relative;
     z-index: var(--z-index-2);
     padding: var(--toggle-button-padding);
     color: var(--color-fg-2);
-    border-radius: 0;
-
-    &:before {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: none;
-      border: 2px solid var(--color-fg-4);
-      border-radius: var(--border-radius);
-      content: '';
-    }
+    cursor: pointer;
 
     &:focus {
+      background-color: var(--color-accent);
       outline: none;
-
-      &:before {
-        display: block;
-      }
     }
   }
 
@@ -55,12 +24,13 @@
   &__close {
     width: var(--toggle-button-svg-height);
     height: var(--toggle-button-svg-height);
+    pointer-events: none;
   }
 
   &__menu {
     display: block;
 
-    .toc-visible & {
+    .--toc-visible & {
       display: none;
     }
   }
@@ -68,7 +38,7 @@
   &__close {
     display: none;
 
-    .toc-visible & {
+    .--toc-visible & {
       display: block;
     }
   }
