--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -6,8 +6,11 @@ html {
   --color-fg-3: #7f7f7f;
   --color-fg-4: #ccc;
   --color-fg-5: #eee;
+  --color-accent: #ffeb00;
+  --font-weight-regular: 400;
   --font-weight-bold: 700;
   --font-family: 'Inter', sans-serif;
+  --font-family-code: 'Menlo', monospace;
   --size-1: 0.25rem;
   --size-2: 0.5rem;
   --size-3: 0.75rem;
