--- a/packages/frontend/src/scss/components/content.scss
+++ b/packages/frontend/src/scss/components/content.scss
@@ -1,6 +1,6 @@
 .content {
   padding: var(--scroll-margin-top) var(--size-4) 0 var(--size-4);
-  font-weight: 400;
+  font-weight: var(--font-weight-regular);
   font-size: var(--size-4);
   line-height: var(--size-6);
   overflow-wrap: break-word;
@@ -16,7 +16,7 @@
     margin-top: var(--size-9);
     font-size: var(--size-9);
     line-height: var(--size-12);
-    letter-spacing: -0.03125rem;
+    letter-spacing: -0.0625rem;
   }
   h2 {
     margin-top: var(--size-7);
@@ -35,7 +35,6 @@
   }
   h5 {
     margin-top: var(--size-4);
-    font-weight: bold;
     font-size: var(--size-4);
   }
   h6 {
@@ -52,6 +51,11 @@
 
     &:hover {
       text-decoration: none;
+    }
+
+    &:focus {
+      background-color: var(--color-accent);
+      outline: none;
     }
   }
 
@@ -70,16 +74,36 @@
   li {
     position: relative;
     padding-left: var(--size-7);
+  }
+
+  li:not(.task-list-item):before,
+  .task-list-item input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+  }
+
+  .task-list-item input {
+    display: block;
+    color: inherit;
+    font: inherit;
+    background: none;
+    border: 0;
+    opacity: 1;
+    -webkit-appearance: none;
 
     &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
       display: block;
+      content: '▢';
+    }
+
+    &:checked:before {
+      content: '✓';
     }
   }
 
-  ul li:before {
+  ul li:not(.task-list-item):before {
     content: '○';
   }
 
@@ -122,7 +146,7 @@
   code {
     padding: 0.1875rem 0.25rem;
     color: var(--color-fg-2);
-    font-family: 'Menlo', monospace;
+    font-family: var(--font-family-code);
     background-color: var(--color-fg-5);
     border-radius: var(--border-radius);
   }
