--- a/packages/frontend/src/scss/reset.scss
+++ b/packages/frontend/src/scss/reset.scss
@@ -33,7 +33,8 @@ blockquote,
 p,
 ol,
 ul,
-li {
+li,
+input {
   margin: 0;
 }
 
@@ -55,4 +56,5 @@ button {
   margin: 0;
   background-color: transparent;
   border: 0;
+  border-radius: 0;
 }
