--- a/packages/frontend/src/scss/base.scss
+++ b/packages/frontend/src/scss/base.scss
@@ -1,3 +1,5 @@
+@import './breakpoints';
+
 html {
   font-size: 16px;
 }
@@ -16,13 +18,13 @@ body {
   background-color: var(--color-accent);
 }
 
-@media (min-width: 640px) {
+@media (min-width: $screen-md) {
   html {
     font-size: 20px;
   }
 }
 
-@media (min-width: 960px) {
+@media (min-width: $screen-lg) {
   html {
     font-size: 24px;
   }
