--- a/packages/frontend/src/scss/components/content.scss
+++ b/packages/frontend/src/scss/components/content.scss
@@ -27,15 +27,16 @@
     font-weight: var(--font-weight-bold);
   }
   h1 {
-    margin-top: var(--size-9);
-    font-size: var(--size-9);
-    line-height: var(--size-12);
+    margin-top: var(--size-16);
+    font-weight: var(--font-weight-bold);
+    font-size: var(--size-7);
+    line-height: var(--size-10);
     letter-spacing: -0.0625rem;
   }
   h2 {
     margin-top: var(--size-7);
-    font-size: var(--size-7);
-    line-height: var(--size-10);
+    font-size: var(--size-6);
+    line-height: var(--size-9);
     letter-spacing: -0.03125rem;
   }
   h3 {
@@ -69,8 +70,9 @@
     }
 
     &:focus {
-      background-color: var(--color-accent);
-      outline: none;
+      color: var(--color-focus-fg);
+      background-color: var(--color-focus-bg);
+      outline: 0;
     }
   }
 
@@ -154,15 +156,15 @@
   img {
     display: block;
     max-width: 100%;
-    margin: auto;
+    margin: var(--size-4) auto 0;
   }
 
   code {
-    // color: var(--color-fg-2);
     font-family: var(--font-family-code);
     background-color: var(--color-fg-5);
     border-radius: var(--border-radius);
   }
+
   pre code {
     display: block;
     padding: var(--size-4);
