--- a/packages/frontend/src/scss/base.scss
+++ b/packages/frontend/src/scss/base.scss
@@ -19,7 +19,7 @@ body {
   background-color: var(--color-selection-bg);
 }
 img::selection {
-  background-color: var(--color-bg);
+  background-color: var(--color-fg-1);
 }
 
 @media (min-width: $screen-md) {
