--- a/packages/frontend/src/scss/breakpoints.scss
+++ b/packages/frontend/src/scss/breakpoints.scss
@@ -1,3 +1,4 @@
-$screen-md: 640px;
-$screen-lg: 960px;
-$screen-xl: 1280px;
+$breakpoint-md: 640px;
+$breakpoint-lg: 960px;
+$breakpoint-xl: 1280px;
+$breakpoint-xxl: 1600px;
