--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -6,14 +6,20 @@
   --color-fg-3: #7f7f7f;
   --color-fg-4: #ccc;
   --color-fg-5: #f4f4f4;
-  --color-focus-bg: #fee81e;
-  --color-focus-fg: #000;
+  --color-focus-keyboard-bg: #fee81e;
+  --color-focus-keyboard-fg: #000;
   --color-selection-bg: rgba(0, 0, 0, 0.99);
   --color-selection-fg: #fff;
-  --font-weight-regular: 400;
-  --font-weight-bold: 700;
-  --font-family: 'Inter', sans-serif;
-  --font-family-code: 'IBM Plex Mono', monospace;
+  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  --font-family-code: SFMono-Regular, Consolas, 'Liberation Mono', Menlo,
+    monospace;
+  --font-weight-regular: normal;
+  --font-weight-bold: bold;
+  --font-size-sm: 0.875rem;
+  --font-size-md: 1rem;
+  --line-height-sm: 1.25rem;
+  --line-height-md: 1.5rem;
   --size-1: 0.25rem;
   --size-2: 0.5rem;
   --size-3: 0.75rem;
@@ -24,7 +30,11 @@
   --size-8: 2rem;
   --size-9: 2.25rem;
   --size-10: 2.5rem;
+  --size-11: 2.75rem;
   --size-12: 3rem;
+  --size-13: 3.25rem;
+  --size-14: 3.5rem;
+  --size-15: 3.75rem;
   --size-16: 4rem;
   --size-20: 5rem;
   --size-24: 6rem;
@@ -32,10 +42,10 @@
   --z-index-1: 1;
   --z-index-2: 2;
 
-  --toggle-button-svg-height: 1.5rem;
-  --toggle-button-padding: 1rem;
-  --toggle-button-height: 3.5rem;
-  --scroll-margin-top: 4.5rem;
+  --button-svg-height: 1rem;
+  --button-padding: 1rem;
+  --button-height: 3rem;
+  --toc-width: 20rem;
 }
 
 @media (prefers-color-scheme: dark) {
