Remove debugging code + small tweaks

--- a/packages/frontend/src/scss/components/toc.scss
+++ b/packages/frontend/src/scss/components/toc.scss
@@ -39,7 +39,7 @@
 }
 .toc .toc__item--active {
   color: var(--color-fg-1);
-  background-color: #111;
+  background-color: var(--color-fg-5);
 }
 
 .toc > ul > li > a {
