--- a/packages/frontend/src/scss/base.scss
+++ b/packages/frontend/src/scss/base.scss
@@ -10,7 +10,7 @@ body {
   background-color: var(--color-bg);
 }
 
-.--toc-visible {
+.--menu-visible {
   position: fixed;
 }
 
@@ -26,7 +26,7 @@ img::selection {
   html {
     font-size: 18px;
   }
-  .--toc-visible {
+  .--menu-visible {
     position: static;
   }
 }
