--- a/packages/frontend/src/scss/style.scss
+++ b/packages/frontend/src/scss/style.scss
@@ -3,5 +3,5 @@
 @import './base.scss';
 @import './components/content.scss';
 @import './components/highlightjs.scss';
-@import './components/toc-toggle-button.scss';
-@import './components/toc.scss';
+@import './components/menu.scss';
+@import './components/menu-toggle-button.scss';
